app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require mirador
 *= require nouislider
 *= require_self
 *= require_tree .
 */

/* New manifest form */

#resources-lookup form {
  display: inline-block;
  padding-left: 2em;
}

#range-option .control-label, #search-option .control-label {
  text-align: left;
  margin-bottom: 1.5%;
}

#range-option .control-label input, #search-option .control-label input {
  text-align: left;
  margin-right: 5%;
}

/* noUiSlider */

.noUi-connect {
  background: #5bc0de; /* #269abc; */
}

.noUi-tooltip {
  display: block;
  position: absolute;
  border: 1px solid #D9D9D9;
  border-radius: 3px;
  background: #fff;
  color: #000;
  padding: 5px;
  text-align: center;
  white-space: nowrap;
  transform: translate(-50%, 0);
  left: 50%;
  bottom: 120%;
}

.ghost {
  opacity: .5;
background: #C8EBFB;
}

.remove-button, .remove-id {
  position: absolute !important;
  top: 0.5em !important;
  right: 0.5em !important;
}

.doc-span {
  padding-right: 2em;
}

#slider {
  margin-top: 3em !important;
  margin-bottom: 3em !important;
}

#search-option {
  margin-top: 3em;
}

.panel-group > ol {
  list-style-type: none;
}



/* Next and previous page links */
 .go-to-prev {
   display: inline-block;
   position: absolute;
   left: 0;
   margin-bottom: 10%;
 }

 .go-to-next {
   display: inline-block;
   position: absolute;
   right: 0;
   margin-bottom: 10%;
 }

 /* Prevents edit fields from floating right when displaying video, audio, or a model */
 .blacklight-catalog-edit .edit_solr_document,
 .blacklight-catalog-show .edit_solr_document {
   float: left !important;
 }

.items-block .items-col .box {
  min-height: 600px;
}

#results p {
  margin-top: 2em;
  text-align: center;
}

